Fix img-collection-item spacing on mobile

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -37,7 +37,7 @@ figcaption {
   caption-side: bottom;
   margin: .5em 0;
 }
-blockquote{
+blockquote {
   font-size: 1.4em;
   width:80%;
   margin:50px auto;
@@ -116,7 +116,9 @@ hr {
   display: flex;
   flex-direction: column;
 }
-.img-collection-row .img-collection-item {
+.img-collection-item {
+  box-sizing: border-box;
+  padding: .5em;
   margin: .5em;
 }
 .img-collection-item img {
@@ -145,6 +147,9 @@ hr {
 @media (max-width: 768px) {
   img {
     width: 100%;
+  }
+  .img-collection-item {
+    margin: .5em 0;
   }
 }
 @media (min-width: 768px) {
